fix:layout issues share link + workflow after material migrate ESPUB-490

--- a/Frontend/src/app/common/ui/authority-search-input/authority-search-input.component.scss
+++ b/Frontend/src/app/common/ui/authority-search-input/authority-search-input.component.scss
@@ -1,5 +1,8 @@
 @import "../../../../styles/variables.scss";
 
+form{
+  width: 100%;
+}
 .authority-search-input{
   width:100%;
   .material-icons {
