--- a/Frontend/src/app/modules/workspace/workflow/workflow.component.scss
+++ b/Frontend/src/app/modules/workspace/workflow/workflow.component.scss
@@ -79,10 +79,14 @@ h2{
 
 
 }
+:host /deep/ authority-search-input .mat-form-field-wrapper{
+  padding-bottom: 0;
+}
 .inputs{
   display:flex;
+  align-items: center;
   width:100%;
-  margin-bottom: -25px;
+  margin-bottom: 10px;
   authority-search-input{
     display: flex;
     width:0;
